<resources>
    <string name="app_name">Ocara</string>
    <string name="action_yes">Oui</string>
    <string name="action_no">Non</string>
    <string name="action_ok">OK</string>
    <string name="action_back">Retour</string>
    <string name="action_cancel">Retour</string>
    <string name="action_exit">Quitter</string>
    <string name="action_exit_menu">Quitter l\'application</string>
    <string name="action_about">A propos</string>
    <string name="action_help">Aide sur la page</string>
    <string name="action_settings">Préférences</string>
    <string name="action_create">Créer</string>
    <string name="action_report">Rapport</string>
    <string name="action_share">Partager</string>
    <string name="action_save">Enregistrer sous</string>
    <string name="action_delete_path">Effacer le parcours</string>
    <string name="action_delete_all_comment">Effacer tous les commentaires</string>
    <string name="action_close_audit">Clore l\'audit</string>
    <string name="action_export_audit_docx">Rapport</string>
    <string name="action_update">Modifier</string>
    <string name="action_remove">Supprimer</string>
    <string name="action_lock">Clore</string>
    <string name="action_close">Fermer</string>
    <string name="action_sort">Tri</string>
    <string name="action_comment">Notes</string>
    <string name="action_rules">Règles</string>
    <string name="action_complete">Compléter</string>
    <string name="action_ruleset">Afficher le jeu de règle</string>
    <string name="title_context">Menu élément de parcours</string>
    <string name="action_object_definition">Voir la définition</string>
    <string name="action_object_remove">Retirer du parcours</string>
    <string name="action_object_update">Renommer</string>
    <string name="action_object_comment">Ajouter un commentaire</string>
    <string name="action_object_characteristics">Modifier les caractéristiques</string>
    <string name="action_object_detail">Détail</string>
    <string name="action_object_grid_detail">Détail</string>
    <string name="action_object_add">Ajouter au parcours</string>
    <string name="action_object_ruleset">Voir le jeu de règle</string>
    <string name="action_text_comment">Texte</string>
    <string name="action_audio_comment">Audio</string>
    <string name="action_photo_comment">Photo</string>
    <string name="action_complete_record">Compléter le parcours</string>
    <string name="action_retest">Retester</string>
    <string name="info_retest">Les caractéristiques sont modifiées. RETESTER vous permet de compléter le test d\’accessibilité de l\’objet</string>
    <string name="response_ok_button">Oui</string>
    <string name="response_nok_button">Non</string>
    <string name="response_notapplicable_button">NA</string>
    <string name="response_no_answer_button">Doute</string>
    <string name="exit_dialog_title">Quitter l\'application ?</string>
    <string name="exit_dialog_message">Êtes vous certain de vouloir quitter l\'application ?</string>
    <string name="navigation_menu_open">Menu ouvert</string>
    <string name="navigation_menu_close">Menu fermé</string>
    <string name="navigation_item_new_audit">Créer un audit</string>
    <string name="navigation_item_list_audit">Tous les audits</string>
    <string name="navigation_item_show_ruleset">Jeu de règles</string>
    <string name="navigation_item_show_help">Aide</string>
    <string name="about_title">A Propos</string>
    <string name="about_version" formatted="false">Version: %s</string>
    <string name="about_label_site">C’est sur le site de Meylan, Isère,  que Ocara prend sa source</string>
    <string name="about_text_1_OpenSource"><b>OCARA</b>, Outil de Contrôle et d’Analyse du Réel Accessible, est avant tout une application permettant d’effectuer un autodiagnostic d’accessibilité des locaux accueillant les salariés. Il fonctionne selon une logique de parcours utilisateur ; grâce à un jeu de règles élaboré, il permet d’auditer tout type d’objet ou de zone de service, selon une approche multi-handicaps.</string>
    <string name="about_text_2_OpenSource">C’est un outil complet et autonome, qui peut être associé à des jeux de règles évolutifs et personnalisables.</string>
    <string name="about_text_3_OpenSource">Ocara est développé par les Orange Labs pour la Mission Insertion Handicap d’Orange. Les règles d’accessibilité proposées, inspirées des ERP, ont été élaborées pour les besoins des salariés de l’entreprise. Mais Ocara peut intégrer d’autres jeux de règles, <b>vos</b> jeux de règles !</string>
    <string name="about_text_4_OpenSource">Orange a décidé de mettre Ocara en open-source afin que toutes les entreprises, associations ou personnes préoccupés par l’accessibilité, puissent utiliser cet outil et contribuer à son développement.</string>
    <string name="about_text_5_OpenSource">L’accessibilité est une cause commune qui rentre dans le cadre des politiques de Responsabilité Sociale des Entreprises. Elle devrait devenir partie intégrante des politiques de bien-être et de la santé au travail, et un facteur d’efficience sociale.</string>
    <string name="about_text_6_OpenSource">Et c’est en mettant en commun nos moyens, en mutualisant,  que l’on ira plus loin ensemble.</string>
    <string name="about_label_site__OpenSource">C’est sur le site de Meylan, Isère,  que Ocara prend sa source</string>
    <string name="about_mailTo_OpenSource"><b>contact : ocara.support@orange.com</b></string>
    <string name="setting_test_title">Quand tester les éléments de parcours</string>
    <string name="setting_test_dialog_title">Quand tester les éléments ?</string>
    <string name="setting_test_ask_every_time">Demander à chaque fois</string>
    <string name="setting_test_now">A la sélection</string>
    <string name="setting_test_later">En fin de parcours</string>
    <string name="setting_display_auditing_progress_title">Afficher le résultat obtenu après chaque audit d\'un objet du parcours </string>
    <string name="setting_display_auditing_progress_dialog_title">Avancement de l\'audit</string>
    <string name="action_sort_by_status">Par statut</string>
    <string name="action_sort_by_site">Par site</string>
    <string name="action_sort_by_date">Par date</string>
    <string name="create_site_title">Entrez les informations concernant votre site ci dessous :</string>
    <string name="create_site_code_hint"><i>Entrez le code du site</i></string>
    <string name="create_site_name_hint"><i>Entrez le nom du site</i></string>
    <string name="create_site_street_hint"><i>Entrez le nom de la rue</i></string>
    <string name="create_site_postal_code_hint"><i>Entrez le code postal</i></string>
    <string name="create_site_city_hint"><i>Entrez le nom de la ville</i></string>
    <string name="create_site_create_site_button">Créer</string>
    <string name="edit_audit_title">Entrez les informations concernant votre audit ci dessous :</string>
    <string name="edit_audit_user_name_hint"><i>Entrez votre nom et prénom</i></string>
    <string name="edit_audit_site_hint"><i>Entrez le nom ou le NOIMM du site à auditer</i></string>
    <string name="edit_audit_name_hint"><i>Entrez le nom de l\'audit</i></string>
    <string name="edit_audit_level_beginner">Novice</string>
    <string name="edit_audit_level_expert">Expert</string>
    <string name="edit_audit_start_audit_button">Créer</string>
    <string name="audit_results_table_handicap_title">Type de handicap</string>
    <string name="audit_results_table_no_impact_title">Accessible</string>
    <string name="audit_results_table_annoying_title">Gênant</string>
    <string name="audit_results_table_blocking_title">Bloquant</string>
    <string name="audit_results_table_doubt_title">Doute</string>
    <string name="edit_comment_validate">Valider</string>
    <string name="edit_comment_text_title">Commentaire textuel</string>
    <string name="edit_comment_text_info"><i>Entrez votre commentaire dans ce champ de texte</i></string>
    <string name="setting_when_test_entries_key">setting_when_test_entries_key</string>
    <string name="setting_display_auditing_progress_key">setting_display_auditing_progress_key</string>
</resources>