<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (C) 2015 Orange

  This Source Code Form is subject to the terms of the Mozilla Public
  License, v. 2.0. If a copy of the MPL was not distributed with this
  file, You can obtain one at http://mozilla.org/MPL/2.0/.
-->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_object_remove"
        android:title="@string/action_object_remove" />
    <item
        android:id="@+id/action_object_update"
        android:title="@string/action_object_update" />
    <item
        android:id="@+id/action_object_comment"
        android:title="@string/action_object_comment" />
    <item
        android:id="@+id/action_object_characteristics"
        android:title="@string/action_object_characteristics" />
    <item
        android:id="@+id/action_object_detail"
        android:title="@string/action_object_detail" />

</menu>