<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (C) 2015 Orange

  This Source Code Form is subject to the terms of the Mozilla Public
  License, v. 2.0. If a copy of the MPL was not distributed with this
  file, You can obtain one at http://mozilla.org/MPL/2.0/.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <com.orange.ocara.ui.view.OcaraListPreference
        android:key="@string/setting_when_test_entries_key"
        android:title="@string/setting_test_title"
        android:dialogTitle="@string/setting_test_dialog_title"
        android:entries="@array/setting_when_test_entries"
        android:entryValues="@array/setting_when_test_entries_values"
        android:summary="%s"
        android:defaultValue="0"
        android:persistent="true"/>

    <com.orange.ocara.ui.view.OcaraListPreference
        android:key="@string/setting_display_auditing_progress_key"
        android:title="@string/setting_display_auditing_progress_title"
        android:dialogTitle="@string/setting_display_auditing_progress_dialog_title"
        android:entries="@array/setting_display_auditing_progress_entries"
        android:entryValues="@array/setting_display_auditing_progress_entries_values"
        android:summary="%s"
        android:defaultValue="1"
        android:persistent="true"/>
</PreferenceScreen>