<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (C) 2015 Orange

  This Source Code Form is subject to the terms of the Mozilla Public
  License, v. 2.0. If a copy of the MPL was not distributed with this
  file, You can obtain one at http://mozilla.org/MPL/2.0/.
-->

<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/ResumeRow"
    android:background="@color/resultTableHeader">

    <TextView
        style="@style/ResumeCellHeaderWithIcon"
        android:text="@string/audit_results_table_handicap_title" />

    <TextView
        style="@style/ResumeCellHeader"
        android:text="@string/audit_results_table_no_impact_title" />

    <TextView
        style="@style/ResumeCellHeader"
        android:text="@string/audit_results_table_annoying_title" />

    <TextView
        style="@style/ResumeCellHeader"
        android:text="@string/audit_results_table_blocking_title" />

    <TextView
        style="@style/ResumeCellHeader"
        android:text="@string/audit_results_table_doubt_title" />

</TableRow>

