<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (C) 2015 Orange

  This Source Code Form is subject to the terms of the Mozilla Public
  License, v. 2.0. If a copy of the MPL was not distributed with this
  file, You can obtain one at http://mozilla.org/MPL/2.0/.
-->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_update"
        android:icon="@drawable/ic_edit"
        app:showAsAction="ifRoom|withText"
        android:title="@string/action_update" />

    <item
        android:id="@+id/action_report"
        android:icon="@drawable/ic_report"
        app:showAsAction="ifRoom|withText"
        android:title="@string/action_report" />

    <item
        android:id="@+id/action_comment"
        android:icon="@drawable/ic_comment"
        app:showAsAction="ifRoom|withText"
        android:title="@string/action_comment" />

    <item
        android:id="@+id/delete_path"
        app:showAsAction="never"
        android:title="@string/action_delete_path" />

</menu>