<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (C) 2015 Orange

  This Source Code Form is subject to the terms of the Mozilla Public
  License, v. 2.0. If a copy of the MPL was not distributed with this
  file, You can obtain one at http://mozilla.org/MPL/2.0/.
-->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_comment_text"
        android:icon="@drawable/ic_text"
        app:showAsAction="ifRoom|withText"
        android:title="@string/action_text_comment" />

    <item
        android:id="@+id/action_comment_audio"
        android:icon="@drawable/ic_microphone"
        app:showAsAction="ifRoom|withText"
        android:title="@string/action_audio_comment" />

    <item
        android:id="@+id/action_comment_photo"
        android:icon="@drawable/ic_camera"
        app:showAsAction="ifRoom|withText"
        android:title="@string/action_photo_comment" />

    <item
        android:id="@+id/delete_all_comments"
        app:showAsAction="never"
        android:title="@string/action_delete_all_comment" />
</menu>
