<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (C) 2015 Orange

  This Source Code Form is subject to the terms of the Mozilla Public
  License, v. 2.0. If a copy of the MPL was not distributed with this
  file, You can obtain one at http://mozilla.org/MPL/2.0/.
-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:attr="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/createSiteLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/editAuditPaddingLeft"
        android:paddingRight="@dimen/editAuditPaddingRight"
        android:paddingBottom="@dimen/editAuditPaddingBottom"
        android:paddingTop="@dimen/editAuditPaddingTop">

        <TextView
            style="@style/MainTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/create_site_title" />

        <EditText
            android:id="@+id/site_noimmo"
            style="@style/EditAuditFieldCell"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/editAuditTitleMarginTop"
            android:layout_marginBottom="@dimen/editAuditRowMarginBottom"
            android:hint="@string/create_site_code_hint"
            android:singleLine="true" />

        <EditText
            android:id="@+id/site_name"
            style="@style/EditAuditFieldCell"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/editAuditTitleMarginTop"
            android:layout_marginBottom="@dimen/editAuditRowMarginBottom"
            android:hint="@string/create_site_name_hint"
            android:singleLine="true" />

        <EditText
            android:id="@+id/site_street"
            style="@style/EditAuditFieldCell"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/editAuditTitleMarginTop"
            android:layout_marginBottom="@dimen/editAuditRowMarginBottom"
            android:hint="@string/create_site_street_hint"
            android:singleLine="true" />

        <EditText
            android:id="@+id/site_postal_code"
            style="@style/EditAuditFieldCell"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/editAuditTitleMarginTop"
            android:layout_marginBottom="@dimen/editAuditRowMarginBottom"
            android:hint="@string/create_site_postal_code_hint"
            android:singleLine="true" />

        <EditText
            android:id="@+id/site_city"
            style="@style/EditAuditFieldCell"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/editAuditTitleMarginTop"
            android:layout_marginBottom="@dimen/editAuditRowMarginBottom"
            android:hint="@string/create_site_city_hint"
            android:singleLine="true" />


        <Button
            android:id="@+id/create_site_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/editAuditStartButtonMarginTop"
            android:enabled="false"
            android:layout_gravity="center"
            android:text="@string/create_site_create_site_button" />

    </LinearLayout>
</ScrollView>