<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (C) 2015 Orange

  This Source Code Form is subject to the terms of the Mozilla Public
  License, v. 2.0. If a copy of the MPL was not distributed with this
  file, You can obtain one at http://mozilla.org/MPL/2.0/.
-->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="1"
        app:showAsAction="never"
        android:title="@string/action_settings" />
    <item
        android:id="@+id/action_help"
        android:orderInCategory="10"
        app:showAsAction="never"
        android:title="@string/action_help" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/action_about" />
    <item
        android:id="@+id/action_disconnect"
        android:orderInCategory="1"
        android:icon="@drawable/ic_disconnect"
        app:showAsAction="ifRoom|withText"
        android:visible="false"
        android:title=""/>

</menu>
