<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (C) 2015 Orange

  This Source Code Form is subject to the terms of the Mozilla Public
  License, v. 2.0. If a copy of the MPL was not distributed with this
  file, You can obtain one at http://mozilla.org/MPL/2.0/.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:focusable="false"
    android:focusableInTouchMode="false">

    <TextView
        android:id="@+id/response_ok_button"
        style="@style/ResponseButton"
        android:background="@drawable/response_ok_background"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/response_ok_button" />

    <TextView
        android:id="@+id/response_no_answer_button"
        style="@style/ResponseButton"
        android:background="@drawable/response_no_answer_background"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/response_no_answer_button"
        android:visibility="gone"
        android:layout_marginLeft="@dimen/responseButtonMargin"/>

    <TextView
        android:id="@+id/response_nok_button"
        style="@style/ResponseButton"
        android:background="@drawable/response_nok_background"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/response_nok_button"
        android:layout_marginLeft="@dimen/responseButtonMargin"/>

    <TextView
        android:id="@+id/response_notapplicable_button"
        style="@style/ResponseButton"
        android:background="@drawable/response_notapplicable_background"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/response_notapplicable_button"
        android:visibility="gone"
        android:layout_marginLeft="@dimen/responseButtonMargin"/>

</LinearLayout>
