<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (C) 2015 Orange

  This Source Code Form is subject to the terms of the Mozilla Public
  License, v. 2.0. If a copy of the MPL was not distributed with this
  file, You can obtain one at http://mozilla.org/MPL/2.0/.
-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:attr="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/editAuditLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/editAuditPaddingLeft"
        android:paddingRight="@dimen/editAuditPaddingRight"
        android:paddingBottom="@dimen/editAuditPaddingBottom"
        android:paddingTop="@dimen/editAuditPaddingTop">

        <TextView
            style="@style/MainTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/edit_audit_title" />

        <EditText
            android:id="@+id/name"
            style="@style/EditAuditFieldCell"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/editAuditTitleMarginTop"
            android:layout_marginBottom="@dimen/editAuditRowMarginBottom"
            android:hint="@string/edit_audit_name_hint"
            android:singleLine="true" />

        <com.orange.ocara.ui.widget.SiteAutoCompleteView
            android:id="@+id/site"
            style="@style/EditAuditFieldCell"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/editAuditRowMarginBottom"
            android:completionThreshold="1"
            android:hint="@string/edit_audit_site_hint"
            android:inputType="textPostalAddress"
            android:singleLine="true" />

        <ImageView
            android:id="@+id/create_site"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_new"
            android:layout_marginLeft="@dimen/auditItemMargin"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <com.orange.ocara.ui.widget.AuditorAutoCompleteView
            android:id="@+id/author"
            style="@style/EditAuditFieldCell"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/editAuditRowMarginBottom"
            android:completionThreshold="2"
            android:hint="@string/edit_audit_user_name_hint"
            android:singleLine="true" />

        <LinearLayout
            style="@style/EditAuditFieldCell"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/editAuditRowMarginBottom"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/type"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:spinnerMode="dropdown" />

            <ImageButton
                android:id="@+id/show_rules_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_ruleset" />
        </LinearLayout>

        <com.orange.ocara.ui.view.Switch
            android:id="@+id/level"
            style="@style/EditAuditFieldCell"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/editAuditRowMarginBottom"
            attr:textLeft="@string/edit_audit_level_beginner"
            attr:textRight="@string/edit_audit_level_expert" />

        <Button
            android:id="@+id/start_audit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/editAuditStartButtonMarginTop"
            android:enabled="false"
            android:layout_gravity="center"
            android:text="@string/edit_audit_start_audit_button" />

    </LinearLayout>
</ScrollView>