<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (C) 2015 Orange

  This Source Code Form is subject to the terms of the Mozilla Public
  License, v. 2.0. If a copy of the MPL was not distributed with this
  file, You can obtain one at http://mozilla.org/MPL/2.0/.
-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/setting_test">
        <RadioButton android:id="@+id/setting_test_now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_test_now"/>
        <RadioButton android:id="@+id/setting_test_later"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_test_later"/>
        <RadioButton android:id="@+id/setting_test_ask_every_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_test_ask_every_time" />
    </RadioGroup>



</RelativeLayout>
